# trustshell

./: DEVELOP.md  README.md  debug_status.sh  pyproject.toml
.github/workflows/: tests.yml
docs/sboms/: README.md
docs/sboms/container/multi-versions/: quay-builder-qemu-rhcos-rhel8-v3.14.0-4-index.json
docs/sboms/container/spdx/: RHEL_AI_1.4.3.json  release_index_sbom.json
docs/sboms/maven/quarkus/3.20/: product-3.20.json  quarkus-camel-bom-3.20.json
docs/sboms/quarkus/: quarkus-camel-3.20.0.json  quarkus-camel-bom-sbom.json  quarkus-cxf-bom-sbom.json
docs/sboms/rpm/libreoffice/: 7.1.8.1-15.el9_4-product.json  7.1.8.1-15.el9_4-release.json
src/trustshell/: __init__.py  api.py  oidc_pkce_authcode.py  osidb.py  product_definitions.py  products.py  purl.py  sbom.py
src/trustshell/oidc/: Containerfile  oidc_pkce_authcode.py  oidc_pkce_server.py  pyproject.toml
tests/: test_osidb.py  test_product_definitions.py  test_products.py  test_purl.py
tests/testdata/: NGX.json  base_purl-quay-builder-qemu-rhcos-rhel-8.json  chardet.json  libreoffice.json  openssl-libs.json  openssl.json  product-definitions.json  quarkus-3.15-xmlsec.json  quarkus-3.20-agroal-api.json  quarkus-vertx-core.json  quay-builder-qemu-index-name.json  quay-builder-qemu-multi.json  quay-builder-qemu-rhcos-rhel-8.json
