[project]
name = "trustshell"
version = "0.1.0"
description = "Command Line tool for Trustify"
readme = "README.md"
authors = [
    { email = "jason@jasonshepherd.net" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "rich>=14.0.0",
]

[project.scripts]
trust-purl = "trustshell.purl:search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = []
