[project]
name = "trustshell"
version = "0.1.0"
description = "Command Line tool for Trustify"
readme = "README.md"
authors = [
    { email = "jason@jasonshepherd.net" }
]
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.12.1",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "jwt>=1.3.1",
    "packageurl-python>=0.16.0",
    "pkce>=1.0.3",
    "rich>=14.0.0",
    "univers>=30.12.1",
]

[project.scripts]
trust-purl = "trustshell.purl:search"
trust-products = "trustshell.products:search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = []
