[project]
name = "trustshell"
version = "0.1.0"
description = "Command Line tool for Trustify"
readme = "README.md"
authors = [
    { email = "jason@jasonshepherd.net" }
]
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.12.1",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "packageurl-python>=0.16.0",
    "pkce>=1.0.3",
    "pyjwt>=2.10.1",
    "rich>=14.0.0",
    "univers>=30.12.1",
]

[project.scripts]
trust-purl = "trustshell.purl:search"
trust-products = "trustshell.products:search"
trust-prime = "trustshell.products:prime_cache"
trust-api = "trustshell.api:api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = []

[tool.ruff]
line-length = 88

[tool.uv.workspace]
members = ["src/trustshell/oidc"]
